infra/templates/mgmt/orchestrator/05-ui/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-ui-svc
  labels:
    app: orchestrator-ui
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: orchestrator-ui
